# roomtemp

./: .dockerignore  .eslintrc.cjs  README.md  eslint.config.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
.github/workflows/: ci.yml
docker/: run-webdriver.sh  webdriver.Dockerfile
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: main-desktop.json  main-mobile.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-my-commands.toml  main-desktop.json  main-mobile.json
src-tauri/src/: app_state.rs  build.rs  lib.rs  main.rs
src-tauri/src/controller/: settings_controller.rs
src-tauri/src/domain/: settings.rs
src-tauri/src/infrastructure/: crypto.rs  db.rs  grpc_client.rs  keystore.rs  mod.rs
src-tauri/src/migration/0001_create_settings/: up.sql
src-tauri/src/migration/0002_use_proxies_if_you_want/: down.sql  up.sql
src-tauri/src/pb/: mod.rs  tempgrpcd.proto  tempgrpcd.rs
src-tauri/src/presentation/: commands.rs  mod.rs  ui_error.rs
src-tauri/src/repository/: diesel_settings_repository.rs  mod.rs
src-tauri/src/usecase/: settings.rs
src-tauri/webdriver/test/: test.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/settings/: page.tsx
src/components/: app-sidebar.tsx  header.tsx
src/components/ui/: sidebar.tsx
src/components/ui/expansions/: datetime-picker.tsx
src/data/: chartData.ts
src/domain/: types.ts
src/e2e/: app.spec.ts  playwright.config.ts
src/e2e/fixtures/: mock-tauri.ts
src/frameworks/: bincode.ts  protobuf-ts.ts  tempgrpcd.client.ts  tempgrpcd.ts
src/hooks/: useMessage.tsx
src/interfaces/presenters/: graphPresenter.ts
src/interfaces/react/components/: GraphChart.tsx
src/interfaces/react/contexts/: grpcRepoContext.tsx
src/interfaces/react/hooks/: useGraphData.ts  useGrpcConnect.ts  useSettings.ts
src/interfaces/repositories/: grpc.ts  settings.ts
src/mocks/: webdriver.ts
src/usecases/: fetchGraphData.ts
