[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
# rust-version = "1.77.2"

# どうやら、これを指定すると、pnpm tauri dev でエラーになる
# build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.13"

[dependencies]
diesel = { version = "2", features = ["r2d2", "sqlite"] }
diesel_migrations = "2"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libsqlite3-sys = { version = "0.33", features = ["bundled"] }
tauri = { version = "2.5", features = [] }
tauri-plugin-log = "2.4.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
tonic-reflection = "0.13"
prost = "0.13"
r2d2 = "0.8"
rand = "0.9"
# https://zenn.dev/myuna/scraps/a1bfaefe24dd24
# 明示的にrustlsを指定する
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
url = "2"
