[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
# rust-version = "1.77.2"

# どうやら、これを指定すると、pnpm tauri dev でエラーになる
# build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "0.14"

[dependencies]
# [target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = { version = "0.4", features = ["ndk-context"] }
# ndk-context = { version = "0.1" }
keyring-core = "0"
# [target.'cfg(not(target_os = "android"))'.dependencies]

base64 = "0"
chacha20poly1305 = "0.10"
diesel = { version = "2", features = ["r2d2", "sqlite"] }
diesel_migrations = "2"
http = "1"
hyper-http-proxy = "1.1"
hyper-util = "0.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native", "crypto-rust"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
tauri = { version = "2.8", features = [] }
# tauri-plugin-log = "2.6.0"
tempgrpcd-protos = { git = "https://github.com/withforesight000/protobuf-rust.git", package = "tempgrpcd-protos" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
tonic-prost = "0.14"
tonic-reflection = "0.14"
once_cell = "1"
pbjson-types = "0.8.0"
prost = "0.14"
r2d2 = "0.8"
rand = "0.9"
# https://zenn.dev/myuna/scraps/a1bfaefe24dd24
# 明示的にrustlsを指定する
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
thiserror = "2"
url = "2"

[dev-dependencies]
mockall = "0.12"
tempfile = "3"
